-*- mode: org -*-

* Changes in 0.4 (since 0.3)

** (xosd bindings) and (xosd) modules merged

Now (xosd) is the only Guile module.  It exports the same symbols as
before except for `osd-on-screen?' and `wait-while-osd-on-screen' which
were removed because they were duplicates of `osd-displayed?' and
`wait-while-osd-displayed' respectively.

`xosd-...' symbols that were exported by (xosd bindings) module don't
exist anymore.

* Changes in 0.3 (since 0.2.2)

** Auxiliary C library was replaced with Guile code

As a result of removing C code, the package is significantly simplified.

* Changes in 0.2.2 (since 0.2.1)

** Support for Guile 3.0 added

* Changes in 0.2.1 (since 0.2)

** Support for Guile 2.2 added

* Changes in 0.2 (since 0.1)

** Procedures from (xosd) module moved to (xosd bindings)

Now (xosd) module contains more Schemey aliases and wrappers.

** New "message.scm" example added

** Argument for `xosd-create' is optional (defaults to 1)

** "pre-inst-env.el" added

* Initial release 0.1 (changes comparing with 'lisposd')

** C file with guile bindings cleaned up to avoid compilation warnings

The code was adjusted to remove many deprecated macros (SCM_INUM,
SCM_STRINGP, etc.).

** The GNU Build System infrastructure added

The hand-written Makefile was replaced with "configure.ac" and
"Makefile.am" files.

** .scm files added

Instead of defining module in a .c file, the real Guile files were
added: (xosd) and (xosd config) modules.

** Bug in setting shadow/outline offset fixed

See commit a02d2040761bbd529219fe5a0e2ff92c465450ab.

** Missing procedures added

`make-xosd' was renamed to `xosd-create'; `xosd-destroy` was added.

** Documentation added

Both texinfo manual and docstrings for the Guile procedures were added.

** Examples added

The resulting package includes "clock.scm" and "volume.scm" files.

** "pre-inst-env" script added